logs/dag_id=insert_date/run_id=manual__2025-01-10T144750.114742+0000/task_id=sql_ft_posting_f/attempt=1.log
[2025-01-10T14:47:59.541+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: insert_date.sql_ft_posting_f manual__2025-01-10T14:47:50.114742+00:00 [queued]>
[2025-01-10T14:47:59.553+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: insert_date.sql_ft_posting_f manual__2025-01-10T14:47:50.114742+00:00 [queued]>
[2025-01-10T14:47:59.561+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 3
[2025-01-10T14:47:59.761+0000] {taskinstance.py:2191} INFO - Executing <Task(SQLExecuteQueryOperator): sql_ft_posting_f> on 2025-01-10 14:47:50.114742+00:00
[2025-01-10T14:47:59.767+0000] {standard_task_runner.py:60} INFO - Started process 774 to run task
[2025-01-10T14:47:59.771+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'insert_date', 'sql_ft_posting_f', 'manual__2025-01-10T14:47:50.114742+00:00', '--job-id', '1495', '--raw', '--subdir', 'DAGS_FOLDER/insert_data.py', '--cfg-path', '/tmp/tmp7ryxk4ig']
[2025-01-10T14:47:59.774+0000] {standard_task_runner.py:88} INFO - Job 1495: Subtask sql_ft_posting_f
[2025-01-10T14:47:59.824+0000] {task_command.py:423} INFO - Running <TaskInstance: insert_date.sql_ft_posting_f manual__2025-01-10T14:47:50.114742+00:00 [running]> on host 711845a6becd
[2025-01-10T14:47:59.914+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='budanovsa' AIRFLOW_CTX_DAG_ID='insert_date' AIRFLOW_CTX_TASK_ID='sql_ft_posting_f' AIRFLOW_CTX_EXECUTION_DATE='2025-01-10T14:47:50.114742+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-01-10T14:47:50.114742+00:00'
[2025-01-10T14:47:59.916+0000] {sql.py:276} INFO - Executing: truncate table ds.ft_posting_f

INSERT INTO ds.ft_posting_f(
      credit_account_rk
    , debet_account_rk
    , credit_amount
    , debet_amount
    , oper_date
)
SELECT fpf."CREDIT_ACCOUNT_RK"
    , fpf."DEBET_ACCOUNT_RK" 
    , fpf."CREDIT_AMOUNT" 
    , fpf."DEBET_AMOUNT" 
    , to_date(fpf."OPER_DATE", 'dd.mm.YYYY')
  FROM stage.ft_posting_f fpf
 WHERE fpf."CREDIT_ACCOUNT_RK" IS NOT NULL
   AND fpf."DEBET_ACCOUNT_RK" IS NOT NULL; 
[2025-01-10T14:47:59.926+0000] {base.py:83} INFO - Using connection ID 'postgres-db' for task execution.
[2025-01-10T14:47:59.937+0000] {base.py:83} INFO - Using connection ID 'postgres-db' for task execution.
[2025-01-10T14:48:00.012+0000] {sql.py:450} INFO - Running statement: truncate table ds.ft_posting_f

INSERT INTO ds.ft_posting_f(
      credit_account_rk
    , debet_account_rk
    , credit_amount
    , debet_amount
    , oper_date
)
SELECT fpf."CREDIT_ACCOUNT_RK"
    , fpf."DEBET_ACCOUNT_RK" 
    , fpf."CREDIT_AMOUNT" 
    , fpf."DEBET_AMOUNT" 
    , to_date(fpf."OPER_DATE", 'dd.mm.YYYY')
  FROM stage.ft_posting_f fpf
 WHERE fpf."CREDIT_ACCOUNT_RK" IS NOT NULL
   AND fpf."DEBET_ACCOUNT_RK" IS NOT NULL; , parameters: None
[2025-01-10T14:48:00.016+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 398, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 455, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: ОШИБКА:  ошибка синтаксиса (примерное положение: "INSERT")
LINE 3: INSERT INTO ds.ft_posting_f(
        ^

[2025-01-10T14:48:00.026+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=insert_date, task_id=sql_ft_posting_f, execution_date=20250110T144750, start_date=20250110T144759, end_date=20250110T144800
[2025-01-10T14:48:00.041+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 1495 for task sql_ft_posting_f (ОШИБКА:  ошибка синтаксиса (примерное положение: "INSERT")
LINE 3: INSERT INTO ds.ft_posting_f(
        ^
; 774)
[2025-01-10T14:48:00.064+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-01-10T14:48:00.104+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
